--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "notes-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://raquelglez.github.io/NotesApp",
+  "homepage": "https://raquelglez.github.io/NotesApp/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
